# usdx_parser

./: Cargo.toml  README.md  flake.nix
src/: lib.rs
tests/: i_hate_everything_about_you.txt  please_tell_rosie.txt  queen_bohemian_rhapsody.txt
